dia-1/lab02/app02/v1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app02-deployment
  labels:
    app: app02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app02
  template:
    metadata:
      labels:
        app: app02
    spec:
      containers:
      - name: app02
        image: public.ecr.aws/l8p4i2g8/secomp-app02:v01
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: '20m'
            memory: '100Mi'
          limits:
            cpu: '20m'
            memory: '100Mi'
