dia-1/lab02/app02/v1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app02-service
spec:
  selector:
    app: app02
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
