dia-1/lab02/app02/v1/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2-virtualservice
  namespace: default
spec:
  hosts:
  - a5a18133073df496eafc4cb99032d7c9-445049dd79a2d647.elb.us-west-1.amazonaws.com
  gateways:
  - app2-gateway
  http:
  - name: "app02"
    match:
    - uri:
        prefix: "/app02" 
    rewrite:
      uri: "/"
    route:
    - destination:
        host: app02-service.default.svc.cluster.local
